--- a/combobox.css
+++ b/combobox.css
@@ -3,12 +3,15 @@
 	zoom: 1;
 	*display: inline;
 	vertical-align: top;
+	position: relative;
 }
 .flower-combobox ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	z-index: 10;
+	position: absolute;
+	width: 100%;
 }
 .flower-combobox li {
 	padding: 0.3em;
